@@ -6,7 +6,7 @@ For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
 ________________________________________________________________________________
 
 Example B: a pyramid-shaped frame --- static and dynamic analysis (N mm ton) 
-Wed Mar  4 01:19:55 2009
+Wed Mar  4 20:08:58 2009
 ________________________________________________________________________________
 5 JOINTS;    4 MEMBERS;    3 LOAD CASES;  4 FIXED JOINTS;  
 For 2D problems, the Y-axis is vertical. 
@@ -81,13 +81,13 @@ L O A D   C A S E   3   O F   3  ...
    0 prescribed displacements
  J O I N T   L O A D S  +  E Q U I V A L E N T   J O I N T   L O A D S  (global)
   Joint       Fx          Fy          Fz          Mxx         Myy         Mzz
-     1     427.783      -7.020    -581.955    8321.175  -24560.394   -2413.493
-     2       0.379       0.181      -0.618    -244.932     372.263     -41.119
-     3      -0.026      -0.187       0.137     103.163      46.175      82.238
+     1     322.342      30.454    -458.017   80692.799 -224299.997  -18968.324
+     2     118.793      56.771    -193.646  -66039.844  100371.709  -11086.726
+     3     -12.999     -94.251      69.227   41223.390   18451.306   32861.892
  C O N C E T R A T E D   P O I N T   L O A D S				(local)
   Beam        Px          Py          Pz          x
-     1       0.000     100.000    -900.000      30.000
-     2       0.000    -200.000     200.000      30.000
+     1       0.000     100.000    -900.000     600.000
+     2       0.000    -200.000     200.000     800.000
 
 E L A S T I C   S T I F F N E S S   A N A L Y S I S   via  L D L'  decomposition
 
@@ -142,24 +142,24 @@ L O A D   C A S E   3   O F   3  ...
 
 J O I N T   D I S P L A C E M E N T S					(global)
   Joint    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1    0.058396   -0.003556   -0.118349    0.017361   -0.035109   -0.003760
+     1    0.025016   -0.008275   -0.091834    0.175938   -0.405708   -0.024910
 B E A M   E N D   F O R C E S						(local)
   Beam   Joint      Nx          Vy         Vz         Txx        Myy        Mzz
-     1      1    114.037c    -99.768    892.688    354.398 -18735.149  -2731.547
-     1      2   -114.037c     -0.232      7.312   -354.398   4931.576    154.703
-     2      1    424.522c    202.096   -197.370   1371.064   3756.773   7696.365
-     2      3   -424.522c     -2.096     -2.630  -1371.064  -2468.301   2095.208
-     3      1    410.342c     -0.997      5.419   -170.907  -4597.570   -856.129
-     3      4   -410.342c      0.997     -5.419    170.907  -5141.521   -956.563
-     4      1     99.856c     -3.869     -3.050  -1187.574   3454.778  -4380.559
-     4      5    -99.856c      3.869      3.050   1187.574   2055.967  -2598.024
+     1      1    153.441c    -68.115    595.736   4365.694 -162309.448 -20130.346
+     1      2   -153.441c    -31.885    304.264  -4365.694 170843.062  17615.878
+     2      1    286.452c    146.231    -83.295  14668.596  16782.777  78255.091
+     2      3   -286.452c     53.769   -116.705 -14668.596 -67157.295 -15186.560
+     3      1    253.455c    -12.141     67.221  -3150.099 -67683.033 -12228.635
+     3      4   -253.455c     12.141    -67.221   3150.099 -53483.940  -9664.326
+     4      1    120.444c    -39.654    -37.150 -13453.001  41482.876 -44275.883
+     4      5   -120.444c     39.654     37.150  13453.001  25500.847 -27212.049
 R E A C T I O N S							(global)
   Joint       Fx          Fy          Fz         Mxx         Myy         Mzz
-     2      72.523      54.683      69.340    3126.196   -3819.824     325.305
-     3    -285.003     211.133     233.294   -1463.846   -1987.492    2503.848
-     4    -276.143    -205.861     223.108    2774.191   -4346.259    -890.711
-     5      62.793     -51.932      57.928    -871.178   -1916.576   -2820.434
-R M S   E Q U I L I B R I U M    E R R O R: 2.562e-01
+     2     -52.015       0.846     338.277   97594.594 -140357.882   17078.948
+     3    -210.201     224.863      61.791  -56797.574  -41348.437   -4499.309
+     4    -205.824    -139.192      84.660   29898.554  -44431.009   -9788.566
+     5      39.895     -79.488      97.721  -12179.744  -22741.251  -30104.176
+R M S   E Q U I L I B R I U M    E R R O R: 6.548e-06
 
 M O D A L   A N A L Y S I S   R E S U L T S
   Total Mass:  1.020379e-01     Structural Mass:  2.037858e-03 
@@ -174,66 +174,66 @@ J O I N T   M A S S E S	(diagonal of the mass matrix)			(global)
 N A T U R A L   F R E Q U E N C I E S   & 
 M A S S   N O R M A L I Z E D   M O D E   S H A P E S 
  convergence tolerance: 1.000e-04 
-  MODE     1:   f= 19.171537 Hz,  T= 0.052161 sec
-		X- modal participation factor =  -2.3591e-02 
-		Y- modal participation factor =  -1.8938e-02 
-		Z- modal participation factor =  -1.6837e-05 
+  MODE     1:   f= 17.127406 Hz,  T= 0.058386 sec
+		X- modal participation factor =  -2.0523e-02 
+		Y- modal participation factor =  -8.9840e-03 
+		Z- modal participation factor =  -4.8835e-05 
   Joint   X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1  -2.506e-02  -3.959e-02  -1.667e-04  -8.764e-02   1.236e-01   9.801e-03
-     2  -1.322e-07  -1.146e-07   2.614e-07   8.074e-05  -1.029e-04  -4.284e-06
-     3  -1.322e-07  -8.752e-08  -7.986e-08   3.598e-06  -5.260e-05   5.170e-05
-     4  -1.525e-07  -8.754e-08  -2.614e-07   7.449e-05  -1.076e-04  -7.429e-06
-     5  -1.525e-07  -1.146e-07   7.985e-08   9.847e-06  -5.729e-05  -6.341e-05
-  MODE     2:   f= 19.882301 Hz,  T= 0.050296 sec
-		X- modal participation factor =   5.7937e-04 
-		Y- modal participation factor =   3.3739e-03 
-		Z- modal participation factor =   2.0285e-06 
+     1  -1.650e-02  -1.436e-02  -4.834e-04  -4.419e-02   1.106e-01  -8.952e-02
+     2  -2.279e-07   7.527e-08   2.055e-07   2.532e-05  -1.095e-04   6.818e-05
+     3  -2.279e-07  -1.807e-07  -1.108e-07   1.870e-05  -8.326e-05   9.738e-05
+     4  -3.590e-08  -1.807e-07  -2.055e-07   8.441e-05  -6.520e-05   4.259e-05
+     5  -3.588e-08   7.528e-08   1.108e-07  -4.039e-05  -3.895e-05   1.338e-05
+  MODE     2:   f= 17.257155 Hz,  T= 0.057947 sec
+		X- modal participation factor =  -1.7451e-02 
+		Y- modal participation factor =   1.1891e-02 
+		Z- modal participation factor =  -5.0205e-05 
   Joint   X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1   5.839e-04   7.963e-03   2.008e-05   1.507e-02  -3.052e-03   1.506e-01
-     2   1.716e-07  -2.051e-07  -2.133e-08   4.291e-05   4.553e-05  -9.244e-05
-     3   1.716e-07   2.425e-07  -1.226e-08  -5.852e-05   3.622e-05  -1.028e-04
-     4  -1.641e-07   2.425e-07   2.133e-08  -6.040e-05  -3.196e-05  -1.012e-04
-     5  -1.641e-07  -2.051e-07   1.226e-08   4.479e-05  -4.127e-05  -9.086e-05
-  MODE     3:   f= 20.960557 Hz,  T= 0.047709 sec
-		X- modal participation factor =  -1.5054e-02 
-		Y- modal participation factor =   3.3653e-02 
-		Z- modal participation factor =   1.4419e-05 
+     1  -1.425e-02   1.936e-02  -4.970e-04   5.828e-02   9.392e-02   1.027e-01
+     2  -1.834e-09  -7.855e-08   7.289e-08   3.328e-05  -2.060e-05  -2.136e-05
+     3  -1.853e-09   2.198e-07  -1.998e-07  -9.223e-05  -5.575e-05  -6.047e-05
+     4  -2.256e-07   2.198e-07  -7.289e-08  -3.557e-05  -7.224e-05  -1.077e-04
+     5  -2.256e-07  -7.853e-08   1.998e-07  -2.337e-05  -1.074e-04  -6.859e-05
+  MODE     3:   f= 18.303535 Hz,  T= 0.054634 sec
+		X- modal participation factor =   7.2669e-04 
+		Y- modal participation factor =   3.1917e-02 
+		Z- modal participation factor =  -1.2155e-05 
   Joint   X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1  -2.056e-02   9.208e-02   1.427e-04   1.428e-01   7.607e-02  -9.873e-03
-     2  -1.172e-07   2.136e-07  -5.123e-08  -5.993e-05  -1.284e-05   8.352e-05
-     3  -1.173e-07   1.810e-07  -3.028e-07  -1.047e-04  -1.109e-04  -2.578e-05
-     4  -9.267e-08   1.810e-07   5.122e-08  -5.239e-05  -7.187e-06  -6.938e-05
-     5  -9.277e-08   2.136e-07   3.028e-07  -1.122e-04  -1.053e-04   3.990e-05
-  MODE     4:   f= 31.715527 Hz,  T= 0.031530 sec
-		X- modal participation factor =   1.9388e-04 
-		Y- modal participation factor =   3.1610e-01 
-		Z- modal participation factor =  -5.7233e-06 
+     1   6.715e-04   5.993e-02  -1.203e-04   1.516e-01  -3.863e-03  -6.555e-02
+     2  -7.509e-08   3.142e-07  -1.923e-07  -1.124e-04   3.592e-05   1.026e-04
+     3  -7.515e-08   9.979e-08  -1.796e-07  -6.032e-05  -6.710e-05  -1.205e-05
+     4   8.569e-08   9.979e-08   1.922e-07  -6.294e-05   7.302e-05  -9.857e-06
+     5   8.562e-08   3.142e-07   1.796e-07  -1.098e-04  -2.999e-05   1.048e-04
+  MODE     4:   f= 31.704898 Hz,  T= 0.031541 sec
+		X- modal participation factor =  -1.8064e-07 
+		Y- modal participation factor =   3.1652e-01 
+		Z- modal participation factor =   4.0186e-06 
   Joint   X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1   7.977e-04   3.154e+00  -5.669e-05  -1.489e-02  -6.602e-04   3.113e-05
-     2   6.345e-09  -2.732e-09   4.379e-08   9.305e-06  -1.067e-05  -1.575e-06
-     3  -1.913e-09  -2.496e-09   4.883e-08   1.030e-05   1.308e-05   5.897e-07
-     4   6.163e-09  -2.494e-09  -4.377e-08   9.245e-06  -1.070e-05   1.472e-06
-     5  -2.093e-09  -2.735e-09  -4.884e-08   1.035e-05   1.304e-05  -6.931e-07
-  MODE     5:   f= 35.159709 Hz,  T= 0.028442 sec
-		X- modal participation factor =  -1.0615e-06 
-		Y- modal participation factor =   3.1257e-06 
-		Z- modal participation factor =   3.1831e-01 
+     1  -6.394e-07   3.155e+00   3.971e-05  -1.302e-02   6.786e-07   2.071e-04
+     2   6.171e-09   3.387e-09   5.347e-08   9.774e-06  -1.339e-05   3.089e-07
+     3  -4.613e-09   5.454e-09   5.341e-08   9.285e-06   1.373e-05  -1.204e-06
+     4   4.609e-09   5.454e-09  -5.341e-08   9.286e-06  -1.373e-05  -1.205e-06
+     5  -6.170e-09   3.378e-09  -5.341e-08   9.764e-06   1.337e-05   3.058e-07
+  MODE     5:   f= 35.157522 Hz,  T= 0.028443 sec
+		X- modal participation factor =  -1.0964e-05 
+		Y- modal participation factor =  -2.2563e-06 
+		Z- modal participation factor =   3.1832e-01 
   Joint   X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1  -5.277e-06   5.042e-05   3.151e+00  -1.145e-05   3.076e-06   6.701e-09
-     2   5.654e-09   4.205e-09   5.657e-08   1.124e-05  -1.498e-05  -9.839e-09
-     3  -5.673e-09   4.203e-09   5.649e-08   1.123e-05   1.495e-05   1.438e-08
-     4  -5.673e-09  -4.290e-09   5.641e-08  -1.119e-05   1.493e-05   9.674e-09
-     5   5.650e-09  -4.290e-09   5.643e-08  -1.120e-05  -1.494e-05  -1.440e-08
-  MODE     6:   f= 42.250405 Hz,  T= 0.023668 sec
-		X- modal participation factor =   3.1723e-01 
-		Y- modal participation factor =  -1.1208e-05 
-		Z- modal participation factor =   5.0957e-07 
+     1  -5.481e-05  -3.663e-05   3.151e+00   8.355e-06   3.143e-05  -3.608e-08
+     2   7.252e-09   5.604e-09   7.414e-08   1.471e-05  -1.967e-05   4.579e-08
+     3  -7.569e-09   5.599e-09   7.363e-08   1.461e-05   1.945e-05   2.139e-08
+     4  -7.568e-09  -5.511e-09   7.371e-08  -1.465e-05   1.948e-05  -4.583e-08
+     5   7.245e-09  -5.510e-09   7.409e-08  -1.473e-05  -1.966e-05  -2.118e-08
+  MODE     6:   f= 42.245842 Hz,  T= 0.023671 sec
+		X- modal participation factor =   3.1732e-01 
+		Y- modal participation factor =   6.7161e-09 
+		Z- modal participation factor =   5.0841e-06 
   Joint   X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
-     1   3.155e+00  -5.131e-04   4.878e-06   2.348e-04   8.578e-03  -1.435e-05
-     2   3.613e-08   8.924e-09   6.675e-08   1.181e-05  -9.389e-06  -5.712e-06
-     3   3.605e-08  -6.218e-09  -6.907e-08  -1.291e-05  -1.005e-05  -6.443e-06
-     4   3.620e-08   8.711e-09  -6.662e-08   1.183e-05  -9.339e-06   5.784e-06
-     5   3.620e-08  -6.016e-09   6.907e-08  -1.296e-05  -1.002e-05   6.531e-06
+     1   3.155e+00   2.056e-07   4.996e-05  -9.930e-08   8.102e-03   9.807e-06
+     2   5.130e-08   9.737e-09   8.502e-08   1.541e-05  -1.071e-05  -8.851e-06
+     3   5.111e-08  -9.711e-09  -8.474e-08  -1.536e-05  -1.068e-05  -8.817e-06
+     4   5.098e-08   9.891e-09  -8.474e-08   1.532e-05  -1.071e-05   8.740e-06
+     5   5.098e-08  -9.884e-09   8.475e-08  -1.532e-05  -1.071e-05   8.742e-06
 M A T R I X    I T E R A T I O N S: 2
-There are 6 modes below 42.250405 Hz. ... All 6 modes were found.
+There are 6 modes below 42.245842 Hz. ... All 6 modes were found.
 
