@@ -6,7 +6,7 @@ For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
 ________________________________________________________________________________
 
 Example F: a seismically-isolated building model (units: N  mm  ton) 
-Wed Mar  4 01:20:20 2009
+Wed Mar  4 20:09:19 2009
 ________________________________________________________________________________
 36 JOINTS;    58 MEMBERS;    1 LOAD CASES;  14 FIXED JOINTS;  
 For 2D problems, the Y-axis is vertical. 
